file(GLOB HDR_ROOT "*.hpp")

set(ROOT_INCLUDE_TARGET include)

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories()()(${PROJECT_NAME}
    INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${ROOT_INCLUDE_TARGET}>
)

INSTALL(FILES ${HDR_ROOT} DESTINATION ${ROOT_INCLUDE_TARGET})